--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+
+
+
     <div style="text-align: center;">
+
+        <h1 th:if="${info != null}" th:text="${info}"></h1>
+
         <form action="/register" method="post">
             <input name="login" type="text" placeholder="Podaj login"> <br/>
             <input name="password" type="password" placeholder="Podaj hasło"> <br/>
