--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <h1 th:if="${info != null}" th:text="${info}"></h1>
+
         <form action="/login" method="post">
             <input name="login" type="text" placeholder="Podaj login"> <br/>
             <input name="password" type="password" placeholder="Podaj hasło"> <br/>
